--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <h1>Bandung</h1>
     <p>Kota metropolitan terbesar di Provinsi Jawa Barat, sekaligus menjadi ibu kota provinsi tersebut.</p>
 
+    <ul>
+        <li>Home</li>
+        <li>About Me</li>
+        <li>Skills</li>
+        <li>Clients</li>
+        <li>Blog</li>
+        <li>Contact</li>
+    </ul>
+
     <h2>Sejarah</h2>
     <p>Kata Bandung berasal dari kata bendung atau bendungan karena terbendungnya sungai Citarum oleh lava Gunung
         Tangkuban
