Menerapkan Lorem Ipsum Pada Paragraf

--- a/index.html
+++ b/index.html
@@ -21,58 +21,29 @@
         <li>Contact</li>
     </ul>
 
-    <h2>Sejarah</h2>
-    <p>Kata Bandung berasal dari kata bendung atau bendungan karena terbendungnya sungai Citarum oleh lava Gunung
-        Tangkuban
-        Parahu yang lalu membentuk telaga. Legenda yang diceritakan oleh orang-orang tua di
-        Bandung mengatakan bahwa nama Bandung diambil dari sebuah kendaraan air yang terdiri dari dua perahu yang diikat
-        berdampingan yang disebut perahu bandung yang digunakan oleh Bupati Bandung, R.A. Wiranatakusumah II, untuk
-        melayari
-        Ci Tarum dalam mencari tempat kedudukan kabupaten yang baru untuk
-        menggantikan ibu kota yang lama di Dayeuhkolot. </p>
+    <h2>About Me</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus officia aliquam totam dolore, dolores expedita!
+        Iure fugiat hic delectus voluptatem non, assumenda ab quos distinctio officia magni vero soluta cum?</p>
 
-    <p>Berdasarkan filosofi Sunda, kata Bandung juga berasal dari kalimat Nga-Bandung-an Banda Indung, yang merupakan
-        kalimat sakral dan luhur karena mengandung nilai ajaran Sunda. Nga-Bandung-an artinya menyaksikan atau bersaksi.
-        Banda adalah segala sesuatu yang berada di alam hidup yaitu di bumi dan atmosfer, baik makhluk hidup maupun
-        benda
-        mati. Sinonim dari banda adalah harta. Indung berarti Ibu atau Bumi, disebut juga sebagai Ibu Pertiwi tempat
-        Banda
-        berada.</p>
+    <h2>Skills</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, modi? Commodi dignissimos provident voluptatum
+        eaque sapiente consequatur quaerat sequi et. Rerum modi repudiandae ipsa eaque numquam vel, quod fugiat
+        assumenda!</p>
 
-    <h2>Geografis</h2>
-    <p>Kota Bandung dikelilingi oleh pegunungan, sehingga bentuk morfologi wilayahnya bagaikan sebuah mangkok raksasa,
-        secara geografis kota ini terletak di tengah-tengah provinsi Jawa Barat, serta berada pada
-        ketinggian ±768 m di atas permukaan laut, dengan titik tertinggi di berada di sebelah utara dengan ketinggian
-        1.050
-        meter di atas permukaan laut dan sebelah selatan merupakan kawasan rendah dengan ketinggian 675 meter di atas
-        permukaan laut.</p>
+    <h2>Clients</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus molestiae fugit corrupti esse! Qui ipsam
+        tenetur dolore? Voluptas corrupti esse praesentium commodi officia a, veritatis fuga aspernatur minima. Enim,
+        blanditiis.</p>
 
-    <p>Kota Bandung dialiri dua sungai utama, yaitu Sungai Cikapundung dan Sungai Citarum beserta anak-anak sungainya
-        yang
-        pada umumnya mengalir ke arah selatan dan bertemu di Sungai Citarum. Dengan kondisi yang
-        demikian, Bandung selatan sangat rentan terhadap masalah banjir terutama pada musim hujan.</p>
+    <h3>Blog</h3>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis assumenda iure ipsa cumque, pariatur esse
+        non! Harum quam ipsum voluptates, cum distinctio recusandae, dicta impedit quidem, consectetur maiores sint non.
+    </p>
 
-    <h2>Wisata</h2>
-    <p>Sejak dibukanya Jalan Tol Cipularang, kota Bandung telah menjadi tujuan utama dalam menikmati liburan akhir pekan
-        terutama dari masyarakat yang berasal dari Jakarta sekitarnya. Selain menjadi kota wisata belanja,
-        kota Bandung juga dikenal dengan sejumlah besar bangunan lama berarsitektur peninggalan Belanda.</p>
-
-    <h3>Farm House Lembang</h3>
-    <p>Berada di jalur utama Bandung-Lembang, Farm House menjadi objek wisata yang tidak pernah sepi pengunjung. Selain
-        karena letaknya strategis, kawasan ini juga menghadirkan nuansa wisata khas Eropa. Semua itu diterapkan dalam
-        bentuk
-        spot swafoto Instagramable.</p>
-
-    <h3>Observatorium Bosscha</h3>
-    <p>Memiliki beberapa teleskop, antara lain, Refraktor Ganda Zeiss, Schmidt Bimasakti, Refraktor Bamberg, Cassegrain
-        GOTO, dan Teleskop Surya. Refraktor Ganda Zeiss adalah jenis teleskop terbesar untuk meneropong bintang. Benda
-        ini
-        diletakkan pada atap kubah sehingga saat teropong digunakan, atap tersebut harus dibuka. Observatorium Bosscha
-        boleh
-        dikunjungi oleh siapapun, tanpa tiket. Namun, bagi yang ingin
-        menggunakan teleskop Zeiss, wajib mendaftarkan diri. Untuk instansi atau lembaga pendidikan, diberikan jadwal
-        hari
-        Selasa sampai Jumat. Sementara itu, kunjungan individu dibuka setiap hari Sabtu.</p>
+    <h3>Contact</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quibusdam ratione iusto officiis, reiciendis
+        pariatur quis perspiciatis repellendus ex, laborum in. Exercitationem dolore deserunt illo odio error laudantium
+        minus voluptatem.</p>
 
 </body>
 
