Menerapkan Anchor pada Navigasi Halaman Profil

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <p>Kota metropolitan terbesar di Provinsi Jawa Barat, sekaligus menjadi ibu kota provinsi tersebut.</p>
 
     <ul>
-        <li>Home</li>
-        <li>About Me</li>
-        <li>Skills</li>
-        <li>Clients</li>
-        <li>Blog</li>
-        <li>Contact</li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About Me</a></li>
+        <li><a href="#">Skills</a></li>
+        <li><a href="#">Clients</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Contact</a></li>
     </ul>
 
     <h2>About Me</h2>
