Menetapkan Elemen Header, Main, dan Footer

--- a/index.html
+++ b/index.html
@@ -9,42 +9,57 @@
 </head>
 
 <body>
-    <h1>Bandung</h1>
-    <p>Kota metropolitan terbesar di Provinsi Jawa Barat, sekaligus menjadi ibu kota provinsi tersebut.</p>
+    <header>
+        <h1>Bandung</h1>
+        <p>Kota metropolitan terbesar di Provinsi Jawa Barat, sekaligus menjadi ibu kota provinsi tersebut.</p>
 
-    <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About Me</a></li>
-        <li><a href="#">Skills</a></li>
-        <li><a href="#">Clients</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Contact</a></li>
-    </ul>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Me</a></li>
+                <li><a href="#">Skills</a></li>
+                <li><a href="#">Clients</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <h2>About Me</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus officia aliquam totam dolore, dolores expedita!
-        Iure fugiat hic delectus voluptatem non, assumenda ab quos distinctio officia magni vero soluta cum?</p>
+    <main>
+        <h2>About Me</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus officia aliquam totam dolore, dolores
+            expedita!
+            Iure fugiat hic delectus voluptatem non, assumenda ab quos distinctio officia magni vero soluta cum?</p>
 
-    <h2>Skills</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, modi? Commodi dignissimos provident voluptatum
-        eaque sapiente consequatur quaerat sequi et. Rerum modi repudiandae ipsa eaque numquam vel, quod fugiat
-        assumenda!</p>
+        <h2>Skills</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, modi? Commodi dignissimos provident
+            voluptatum
+            eaque sapiente consequatur quaerat sequi et. Rerum modi repudiandae ipsa eaque numquam vel, quod fugiat
+            assumenda!</p>
 
-    <h2>Clients</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus molestiae fugit corrupti esse! Qui ipsam
-        tenetur dolore? Voluptas corrupti esse praesentium commodi officia a, veritatis fuga aspernatur minima. Enim,
-        blanditiis.</p>
+        <h2>Clients</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus molestiae fugit corrupti esse! Qui ipsam
+            tenetur dolore? Voluptas corrupti esse praesentium commodi officia a, veritatis fuga aspernatur minima.
+            Enim,
+            blanditiis.</p>
 
-    <h3>Blog</h3>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis assumenda iure ipsa cumque, pariatur esse
-        non! Harum quam ipsum voluptates, cum distinctio recusandae, dicta impedit quidem, consectetur maiores sint non.
-    </p>
+        <h3>Blog</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis assumenda iure ipsa cumque, pariatur
+            esse
+            non! Harum quam ipsum voluptates, cum distinctio recusandae, dicta impedit quidem, consectetur maiores sint
+            non.
+        </p>
 
-    <h3>Contact</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quibusdam ratione iusto officiis, reiciendis
-        pariatur quis perspiciatis repellendus ex, laborum in. Exercitationem dolore deserunt illo odio error laudantium
-        minus voluptatem.</p>
+        <h3>Contact</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quibusdam ratione iusto officiis, reiciendis
+            pariatur quis perspiciatis repellendus ex, laborum in. Exercitationem dolore deserunt illo odio error
+            laudantium
+            minus voluptatem.</p>
+    </main>
 
+    <footer>
+        <p>Made by Panji Maulana</p>
+    </footer>
 </body>
 
 </html>
