Menggunakan <div>, <aside>, <article>, dan <section> pada Konten

--- a/index.html
+++ b/index.html
@@ -26,35 +26,70 @@
     </header>
 
     <main>
-        <h2>About Me</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus officia aliquam totam dolore, dolores
-            expedita!
-            Iure fugiat hic delectus voluptatem non, assumenda ab quos distinctio officia magni vero soluta cum?</p>
+        <div id='content'>
+            <article>
+                <h2>About Me</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus officia aliquam totam dolore,
+                    dolores
+                    expedita!
+                    Iure fugiat hic delectus voluptatem non, assumenda ab quos distinctio officia magni vero soluta cum?
+                </p>
+            </article>
 
-        <h2>Skills</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, modi? Commodi dignissimos provident
-            voluptatum
-            eaque sapiente consequatur quaerat sequi et. Rerum modi repudiandae ipsa eaque numquam vel, quod fugiat
-            assumenda!</p>
+            <article>
+                <h2>Skills</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, modi? Commodi dignissimos
+                    provident
+                    voluptatum
+                    eaque sapiente consequatur quaerat sequi et. Rerum modi repudiandae ipsa eaque numquam vel, quod
+                    fugiat
+                    assumenda!</p>
+            </article>
 
-        <h2>Clients</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus molestiae fugit corrupti esse! Qui ipsam
-            tenetur dolore? Voluptas corrupti esse praesentium commodi officia a, veritatis fuga aspernatur minima.
-            Enim,
-            blanditiis.</p>
+            <article>
+                <h2>Clients</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus molestiae fugit corrupti esse!
+                    Qui
+                    ipsam
+                    tenetur dolore? Voluptas corrupti esse praesentium commodi officia a, veritatis fuga aspernatur
+                    minima.
+                    Enim,
+                    blanditiis.</p>
+            </article>
 
-        <h3>Blog</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis assumenda iure ipsa cumque, pariatur
-            esse
-            non! Harum quam ipsum voluptates, cum distinctio recusandae, dicta impedit quidem, consectetur maiores sint
-            non.
-        </p>
+            <article>
+                <h3>Blog</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis assumenda iure ipsa cumque,
+                    pariatur
+                    esse
+                    non! Harum quam ipsum voluptates, cum distinctio recusandae, dicta impedit quidem, consectetur
+                    maiores
+                    sint
+                    non.
+                </p>
+            </article>
 
-        <h3>Contact</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quibusdam ratione iusto officiis, reiciendis
-            pariatur quis perspiciatis repellendus ex, laborum in. Exercitationem dolore deserunt illo odio error
-            laudantium
-            minus voluptatem.</p>
+            <article>
+                <h3>Contact</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quibusdam ratione iusto officiis,
+                    reiciendis
+                    pariatur quis perspiciatis repellendus ex, laborum in. Exercitationem dolore deserunt illo odio
+                    error
+                    laudantium
+                    minus voluptatem.</p>
+            </article>
+        </div>
+
+        <aside>
+            <article>
+                <h2>Kota Bandung</h2>
+                <p>Kota Kembang Paris van Java</p>
+                <figure>
+                    <img src="assets/image/bandung-badge.png">
+                    <figcaption>Lambang</figcaption>
+                </figure>
+            </article>
+        </aside>
     </main>
 
     <footer>
