Menetapkan Tag <aside> Di Dalam Tag <div id=content> Sebagai <article> Dari About Me

--- a/index.html
+++ b/index.html
@@ -27,14 +27,20 @@
 
     <main>
         <div id='content'>
-            <article>
-                <h2>About Me</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus officia aliquam totam dolore,
-                    dolores
-                    expedita!
-                    Iure fugiat hic delectus voluptatem non, assumenda ab quos distinctio officia magni vero soluta cum?
-                </p>
-            </article>
+            <aside>
+                <article>
+                    <h2>About Me</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam ad odio, autem quidem eaque
+                        voluptatem officiis accusantium doloremque provident corporis eveniet minus dicta quam
+                        quibusdam, sint maxime earum nemo molestiae.</p>
+                    <figure>
+                        <img src="assets/image/bandung-badge.png">
+                        <figcaption>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad ipsa earum qui minima
+                            distinctio, iusto ab commodi rem sit dignissimos corrupti ratione unde nulla, error minus
+                            enim facere quia. Sint.</figcaption>
+                    </figure>
+                </article>
+            </aside>
 
             <article>
                 <h2>Skills</h2>
@@ -79,17 +85,6 @@
                     minus voluptatem.</p>
             </article>
         </div>
-
-        <aside>
-            <article>
-                <h2>Kota Bandung</h2>
-                <p>Kota Kembang Paris van Java</p>
-                <figure>
-                    <img src="assets/image/bandung-badge.png">
-                    <figcaption>Lambang</figcaption>
-                </figure>
-            </article>
-        </aside>
     </main>
 
     <footer>
