Menetapkan navigasi pada halaman profile

--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Clients</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href='#'>Home</a></li>
+                <li><a href='#about-me'>About Me</a></li>
+                <li><a href='#skills'>Skills</a></li>
+                <li><a href='#clients'>Clients</a></li>
+                <li><a href='#blog'>Blog</a></li>
+                <li><a href='#contact'>Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <div id='content'>
-            <article>
+            <article id='about-me'>
                 <aside>
                     <h2>About Me</h2>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam ad odio, autem quidem eaque
                         voluptatem officiis accusantium doloremque provident corporis eveniet minus dicta quam
                         quibusdam, sint maxime earum nemo molestiae.</p>
                     <figure>
-                        <img src="assets/image/bandung-badge.png">
+                        <img src='assets/image/bandung-badge.png'>
                         <figcaption>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad ipsa earum qui minima
                             distinctio, iusto ab commodi rem sit dignissimos corrupti ratione unde nulla, error minus
                             enim facere quia. Sint.</figcaption>
@@ -40,7 +40,7 @@
                 </aside>
             </article>
 
-            <article>
+            <article id='skills'>
                 <h2>Skills</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, modi? Commodi dignissimos
                     provident
@@ -50,7 +50,7 @@
                     assumenda!</p>
             </article>
 
-            <article>
+            <article id='clients'>
                 <h2>Clients</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus molestiae fugit corrupti esse!
                     Qui
@@ -61,7 +61,7 @@
                     blanditiis.</p>
             </article>
 
-            <article>
+            <article id='blog'>
                 <h2>Blog</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis assumenda iure ipsa cumque,
                     pariatur
@@ -73,7 +73,7 @@
                 </p>
             </article>
 
-            <article>
+            <article id='contact'>
                 <h2>Contact</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quibusdam ratione iusto officiis,
                     reiciendis
