--- a/index.html
+++ b/index.html
@@ -12,75 +12,123 @@
 <body>
     <header>
         <nav>
+            <div class='logo'>
+                <h3><a href='#home'>Panji Maulana</a></h3>
+            </div>
+
             <ul>
-                <li><a href='#'>Home</a></li>
+                <li><a href='#home'>Home</a></li>
                 <li><a href='#about-me'>About Me</a></li>
                 <li><a href='#skills'>Skills</a></li>
-                <li><a href='#clients'>Clients</a></li>
-                <li><a href='#blog'>Blog</a></li>
+                <li><a href='#portfolio'>Portfolio</a></li>
                 <li><a href='#contact'>Contact</a></li>
             </ul>
+
+            <i id="toogle-menu" class="fa-solid fa-bars"></i>
+            <i id="close-menu" class="fa-solid fa-xmark"></i>
         </nav>
+
+        <div class="container">
+            <section id='home'>
+                <div class="jumbotron">
+                    <article class="desc-bio">
+                        <h2>Hello, I am <span id="slogan"></span></h2>
+                        <h4>as Frontend Developer</h4>
+                        <button>Contact Me</button>
+                    </article>
+                    <article class="img-bio">
+                        <figure>
+                            <img src='assets/image/panji-maulana.jpg' alt="panji maulana" width="50%">
+                        </figure>
+                    </article>
+                </div>
+            </section>
+        </div>
     </header>
 
     <main>
-        <div id='content'>
+        <div class="container">
             <article id='about-me'>
-                <aside>
-                    <h2>About Me</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam ad odio, autem quidem eaque
-                        voluptatem officiis accusantium doloremque provident corporis eveniet minus dicta quam
-                        quibusdam, sint maxime earum nemo molestiae.</p>
-                    <figure>
-                        <img src='assets/image/bandung-badge.png'>
-                        <figcaption>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad ipsa earum qui minima
-                            distinctio, iusto ab commodi rem sit dignissimos corrupti ratione unde nulla, error minus
-                            enim facere quia. Sint.</figcaption>
-                    </figure>
-                </aside>
+                <h2 class="heading-two">About Me</h2>
+                <p>S1 Informatics graduate who has experience as a Full Stack Developer. Skilled in mastering
+                    frontend and backend technologies such as JavaScript frameworks/libraries such as React and Vue,
+                    Node.js, SQL and non-SQL databases, as well as in building SEO-friendly, attractive, interactive
+                    and responsive web & mobile UI/UX designs.</p>
             </article>
 
             <article id='skills'>
-                <h2>Skills</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, modi? Commodi dignissimos
-                    provident
-                    voluptatum
-                    eaque sapiente consequatur quaerat sequi et. Rerum modi repudiandae ipsa eaque numquam vel, quod
-                    fugiat
-                    assumenda!</p>
+                <h2 class="heading-two">Skills</h2>
+                <p>Technology stack skills and experience.</p>
+                <div class="skills-icon">
+                    <i class="fa-brands fa-html5 fa-2xl"></i>
+                    <i class="fa-brands fa-css3-alt fa-2xl"></i>
+                    <i class="fa-brands fa-js fa-2xl"></i>
+                    <i class="fa-brands fa-react fa-2xl"></i>
+                    <i class="fa-brands fa-vuejs fa-2xl"></i>
+                    <i class="fa-brands fa-node-js fa-2xl"></i>
+                    <i class="fa-brands fa-bootstrap fa-2xl"></i>
+                    <i class="fa-brands fa-sass fa-2xl"></i>
+                    <i class="fa-brands fa-git fa-2xl"></i>
+                    <i class="fa-brands fa-github fa-2xl"></i>
+                    <i class="fa-brands fa-bitbucket fa-2xl"></i>
+                </div>
             </article>
 
-            <article id='clients'>
-                <h2>Clients</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus molestiae fugit corrupti esse!
-                    Qui
-                    ipsam
-                    tenetur dolore? Voluptas corrupti esse praesentium commodi officia a, veritatis fuga aspernatur
-                    minima.
-                    Enim,
-                    blanditiis.</p>
-            </article>
-
-            <article id='blog'>
-                <h2>Blog</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis assumenda iure ipsa cumque,
-                    pariatur
-                    esse
-                    non! Harum quam ipsum voluptates, cum distinctio recusandae, dicta impedit quidem, consectetur
-                    maiores
-                    sint
-                    non.
-                </p>
+            <article id='portfolio'>
+                <h2 class="heading-two">Portfolio</h2>
+                <p>Portfolio that has been built.</p>
+                <div class="portfolio-card">
+                    <div class="card">
+                        <figure>
+                            <img src="assets/image/theater-24.jpg" alt="Theater 24" width="100%">
+                            <figcaption>
+                                This is a web about movies built on a technology stack using Vue, 3rd Party API (The
+                                Movie Database), PostgreSQL, Express.js, Node.js, Midtrans.
+                            </figcaption>
+                        </figure>
+                        <button type="button"><a href="https://theater24.web.app/">View more</a></button>
+                    </div>
+                    <div class="card">
+                        <figure>
+                            <img src="assets/image/customer-storepedia.jpg" alt="Customer Storepedia" width="100%">
+                            <figcaption>
+                                This is a web about customer e-commerce built on a technology stack using Vue,
+                                PostgreSQL, Express.js, Node.js.
+                            </figcaption>
+                        </figure>
+                        <button type="button"><a href="https://e-commerce-cms-858a6.web.app/">View more</a></button>
+                    </div>
+                    <div class="card">
+                        <figure>
+                            <img src="assets/image/cms-storepedia.jpg" alt="CMS Storepedia" width="100%">
+                            <figcaption>
+                                This is a web about customer CMS built on a technology stack using Vue, PostgreSQL,
+                                Express.js, Node.js.
+                            </figcaption>
+                        </figure>
+                        <button type="button"><a href="https://fancy-e-commerce-customer.web.app/">View
+                                more</a></button>
+                    </div>
+                </div>
             </article>
 
             <article id='contact'>
-                <h2>Contact</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quibusdam ratione iusto officiis,
-                    reiciendis
-                    pariatur quis perspiciatis repellendus ex, laborum in. Exercitationem dolore deserunt illo odio
-                    error
-                    laudantium
-                    minus voluptatem.</p>
+                <h2 class="heading-two">Contact</h2>
+                <p>If you have any questions about me. Please contact me.</p>
+                <form action="" method="post">
+                    <fieldset>
+                        <input placeholder="Your name" type="text" required>
+                    </fieldset>
+                    <fieldset>
+                        <input placeholder="Your Email Address" type="email" required>
+                    </fieldset>
+                    <fieldset>
+                        <textarea placeholder="Type your message here...." required></textarea>
+                    </fieldset>
+                    <fieldset>
+                        <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
+                    </fieldset>
+                </form>
             </article>
         </div>
     </main>
@@ -88,6 +136,9 @@
     <footer>
         <p>Made by Panji Maulana</p>
     </footer>
+
+    <script src="index.js"></script>
+    <script src="https://kit.fontawesome.com/30586b5899.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
