Memperbaharui about me dengan 2 kolom dan footer social media dialihkan ke about me

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <article id='home'>
             <div class='container'>
                 <div class='jumbotron'>
-                    <article class='desc-bio'>
+                    <section class='desc-bio'>
                         <h2>Hello, I am <span id='typewriter-name'></span></h2>
                         <h4>as Frontend Developer</h4>
                         <button type='button' class='download-cv'>
@@ -43,22 +43,33 @@
                                 CV <i class='fa-solid fa-download'></i>
                             </a>
                         </button>
-                    </article>
-                    <article class='img-bio'>
+                    </section>
+                    <section class='img-bio'>
                         <figure>
                             <img src='assets/image/panji-maulana.jpg' alt='panji maulana' width='50%'>
                         </figure>
-                    </article>
+                    </section>
                 </div>
             </div>
         </article>
 
         <article id='about-me'>
+            <h2 class='heading-two'>About Me</h2>
             <div class='container'>
-                <h2 class='heading-two'>About Me</h2>
-                <p>Experienced Frontend Developer who is comfortable working with HTML, CSS, JavaScript and
-                    frameworks/libraries such as React, Next, and Vue in building SEO friendly, attractive, responsive
-                    and interactive Web & Mobile UI/UX design to provide a great customer experience.</p>
+                <section id="desc-about-me">
+                    <p>Experienced Frontend Developer who is comfortable working with HTML, CSS, JavaScript and
+                        frameworks/libraries such as React, Next, and Vue in building SEO friendly, attractive,
+                        responsive
+                        and interactive Web & Mobile UI/UX design to provide a great customer experience.</p>
+                </section>
+                <section id='social-media'>
+                    <p>Let's be friends with me, if you have any questions don't hesitate to ask my social media.</p>
+                    <div class='icon-social-media'>
+                        <a href='mailto: panjinmaulana@gmail.com'><i class='fa-solid fa-envelope fa-2xl'></i></a>
+                        <a href='https://linkedin.com/in/panji-maulana/'><i class='fa-brands fa-linkedin fa-2xl'></i></a>
+                        <a href='https://github.com/panjinmaulana'><i class='fa-brands fa-github fa-2xl'></i></a>
+                    </div>
+                </section>
             </div>
         </article>
 
@@ -155,13 +166,6 @@
                 Created by <span>Panji Maulana</span>
             </p>
         </section>
-
-        <section id='social-media'>
-            <div class='icon-social-media'>
-                <a href='mailto: panjinmaulana@gmail.com'><i class='fa-solid fa-envelope fa-xl'></i></a>
-                <a href='https://linkedin.com/in/panji-maulana/'><i class='fa-brands fa-linkedin fa-xl'></i></a>
-                <a href='https://github.com/panjinmaulana'><i class='fa-brands fa-github fa-xl'></i></a>
-            </div>
         </section>
     </footer>
 
